# prisma

server/prisma-rs/libs/database-introspection/src/: lib.rs  mysql.rs  postgres.rs  sqlite.rs
server/prisma-rs/libs/database-introspection/tests/: introspection_connection_tests.rs
server/prisma-rs/migration-engine/connectors/migration-connector/src/: error.rs  lib.rs
server/prisma-rs/migration-engine/connectors/sql-migration-connector/src/: lib.rs  migration_database.rs
server/prisma-rs/migration-engine/core/: Cargo.toml
server/prisma-rs/migration-engine/core/src/: api.rs  error.rs  main.rs  migration_engine.rs
server/prisma-rs/migration-engine/core/src/api/: rpc.rs
server/prisma-rs/migration-engine/core/src/commands/: command.rs
server/prisma-rs/migration-engine/core/tests/: existing_databases_tests.rs  migrations_tests.rs
server/prisma-rs/migration-engine/core/tests/test_harness/: command_helpers.rs  misc_helpers.rs
server/prisma-rs/query-engine/prisma/src/: main.rs
