[package]
name = "migration-core"
version = "0.1.0"
authors = ["Marcus Böhm <boehm@prisma.io>", "Julius de Bruijn <bruijn@prisma.io>"]
edition = "2018"

[dependencies]
migration-connector = { path = "../connectors/migration-connector" }
datamodel = { path = "../../libs/datamodel" }
prisma-models = { path = "../../prisma-models" }
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
boolinator = "2.4.0"
url = "1.7"
sql-migration-connector = { path = "../connectors/sql-migration-connector" }
log = "0.4"
failure = "0.1"
failure_derive = "0.1"
jsonrpc-core = "11.0.0"

futures = "0.1"
tokio = "0.1"
tokio-threadpool = "0.1"

[dev-dependencies]
prisma-query = { git = "https://github.com/prisma/prisma-query.git" }
barrel = { version = "0.6.2", features = ["sqlite3", "mysql", "pg"] }

[[bin]]
name = "migration-engine"
path = "src/main.rs"
